--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       rel="stylesheet"
     />
 
-    <!-- Bootstrap -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
-
     <!-- Stylesheet -->
     <link href="./styles/style.css" type="text/css" rel="stylesheet" />
   </head>
@@ -25,49 +22,67 @@
         id="header-logo"
         src="https://lh3.googleusercontent.com/yetq0IcjBG6pDg0gx8tAkI86BniQ29BLewz5UzOSJnbarFD_KVir4nLbkMpWZSaIRsMoluJJOO6tvtEmRfK9fJRrF6MI2qZ1PXC2picCAisv1WimaSmhFEQRhnBpHVRNK3mcb9R0Pg=w2400"
       />
-      <h1>React Guide</h1>
+      <h1>React Docs</h1>
       <div id="menu"><a href="#menu"></a></div>
     </header>
 
     <!-- Navigation Bar -->
     <nav id="navbar">
       <header>Main Concepts</header>
-      <a class="nav-link" href="#Hello_World">Hello World</a>
-      <a class="nav-link" href="#Knowledge_Level_Assumptions"
-        >Knowledge Level Assumptions</a
-      >
-      <a class="nav-link" href="#Introducing_JSX">Introducing JSX</a>
-      <a class="nav-link" href="#Why_JSX?">Why JSX?</a>
-      <a class="nav-link" href="#Embedding_Expressions_in_JSX"
-        >Embedding Expressions in JSX</a
-      >
-      <a class="nav-link" href="#JSX_is_an_Expression_Too"
-        >JSX is an Expression Too</a
-      >
-      <a class="nav-link" href="#Specifying_Attributes_with_JSX"
-        >Specifying Attributes with JSX</a
-      >
-      <a class="nav-link" href="#Specifying_Children_with_JSX"
-        >Specifying Children with JSX</a
-      >
-      <a class="nav-link" href="#JSX_Prevents_Injection_Attacks"
-        >JSX Prevents Injection Attacks</a
-      >
-      <a class="nav-link padding-bottom" href="#JSX_Represents_Objects"
-        >JSX Represents Objects</a
-      >
+      <ul>
+        <li><a class="nav-link" href="#Hello_World">Hello World</a></li>
+        <li>
+          <a class="nav-link" href="#Knowledge_Level_Assumptions"
+            >Knowledge Level Assumptions</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#Introducing_JSX">Introducing JSX</a>
+        </li>
+        <li><a class="nav-link" href="#Why_JSX?">Why JSX?</a></li>
+        <li>
+          <a class="nav-link" href="#Embedding_Expressions_in_JSX"
+            >Embedding Expressions in JSX</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#JSX_is_an_Expression_Too"
+            >JSX is an Expression Too</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#Specifying_Attributes_with_JSX"
+            >Specifying Attributes with JSX</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#Specifying_Children_with_JSX"
+            >Specifying Children with JSX</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#JSX_Prevents_Injection_Attacks"
+            >JSX Prevents Injection Attacks</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#JSX_Represents_Objects"
+            >JSX Represents Objects</a
+          >
+        </li>
+      </ul>
     </nav>
 
     <!-- Main Content -->
-    <main id="main-doc" class="container">
+    <main id="main-doc">
       <section id="Hello_World" class="main-section">
         <header>Hello World</header>
         <p>The smallest React example looks like this:</p>
         <code>
           <pre>
 ReactDOM.render(
-  &lt;h1&gt;Hello, world!&lt;/h1&gt;,
-  document.getElementById('root')
+&lt;h1&gt;Hello, world!&lt;/h1&gt;,
+document.getElementById('root')
 );</pre
           >
         </code>
@@ -159,8 +174,8 @@ const name = 'Josh Perez';
 const element = &lt;h1&gt;Hello, {name}&lt;/h1&gt;;
 
 ReactDOM.render(
-  element,
-  document.getElementById('root')
+element,
+document.getElementById('root')
 );</pre
           >
         </code>
@@ -176,23 +191,23 @@ ReactDOM.render(
         <code>
           <pre>
 function formatName(user) {
-  return user.firstName + ' ' + user.lastName;
+return user.firstName + ' ' + user.lastName;
 }
 
 const user = {
-  firstName: 'Harper',
-  lastName: 'Perez'
+firstName: 'Harper',
+lastName: 'Perez'
 };
 
 const element = (
-  &lt;h1&gt;
-    Hello, {formatName(user)}!
-  &lt;/h1&gt;
+&lt;h1&gt;
+  Hello, {formatName(user)}!
+&lt;/h1&gt;
 );
 
 ReactDOM.render(
-  element,
-  document.getElementById('root')
+element,
+document.getElementById('root')
 );</pre
           >
         </code>
@@ -224,10 +239,10 @@ ReactDOM.render(
         <code>
           <pre>
 function getGreeting(user) {
-  if (user) {
-    return &lt;h1&gt;Hello, {formatName(user)}!&lt;/h1&gt;;
-  }
-  return &lt;h1&gt;Hello, Stranger.&lt;/h1&gt;;
+if (user) {
+  return &lt;h1&gt;Hello, {formatName(user)}!&lt;/h1&gt;;
+}
+return &lt;h1&gt;Hello, Stranger.&lt;/h1&gt;;
 }</pre
           >
         </code>
@@ -268,10 +283,10 @@ const element = &lt;img src={user.avatarUrl}&gt;&lt;/img&gt;;</pre
         <code>
           <pre>
 const element = (
-  &lt;div&gt;
-    &lt;h1&gt;Hello!&lt;/h1&gt;
-    &lt;h2&gt;Good to see you here.&lt;/h2&gt;
-  &lt;/div&gt;
+&lt;div&gt;
+  &lt;h1&gt;Hello!&lt;/h1&gt;
+  &lt;h2&gt;Good to see you here.&lt;/h2&gt;
+&lt;/div&gt;
 );</pre
           >
         </code>
@@ -303,18 +318,18 @@ const element = &lt;h1&gt;{title}&lt;/h1&gt;;</pre
         <code>
           <pre>
 const element = (
-  &lt;h1 className="greeting"&gt;
-    Hello, world!
-  &lt;/h1&gt;
+&lt;h1 className="greeting"&gt;
+  Hello, world!
+&lt;/h1&gt;
 );</pre
           >
         </code>
         <code>
           <pre>
 const element = React.createElement(
-  'h1',
-  {className: 'greeting'},
-  'Hello, world!'
+'h1',
+{className: 'greeting'},
+'Hello, world!'
 );</pre
           >
         </code>
@@ -326,11 +341,11 @@ const element = React.createElement(
           <pre>
 // Note: this structure is simplified
 const element = {
-  type: 'h1',
-  props: {
-    className: 'greeting',
-    children: 'Hello, world!'
-  }
+type: 'h1',
+props: {
+  className: 'greeting',
+  children: 'Hello, world!'
+}
 };</pre
           >
         </code>
